--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: "Terraform Plan GCP Action"
+name: "Terraform Plan and Apply GCP Action"
 description: "Run Terraform Plan and Apply in a containerized GitHub Action for GCP, built by Gus Vega. No Terraform install required"
 author: "gusvega"
 branding:
