--- a/action.yml
+++ b/action.yml
@@ -14,6 +14,10 @@ inputs:
     description: "JSON string containing secrets"
     required: false
     default: "{}"
+  apply:
+    description: 'Whether to run terraform apply after plan'
+    required: false
+    default: 'true'
 
 outputs:
   plan-apply_status:
